@@ -18,7 +18,7 @@ panel.quantile <-
 {
     library("quantreg")
     plot.line <- trellis.par.get("plot.line")
-    if (all(is.na(col)) && !missing(col.line))
+    if (!missing(col.line))
         col <- col.line
     ## allow 'form' to be passed as the first argument
     missing.x <- missing(x)
